# methodeutics

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/methodeutics/: __init__.py  bankroll.py  models.py
tests/: test_bankroll.py
