[project]
name = "methodeutics"
version = "0.1.0"
description = "E-value bankrolls: anytime-valid evidence as a running bet against your hypothesis"
readme = "README.md"
authors = [{ name = "June Kim", email = "kimjune01@gmail.com" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.9"
dependencies = []
keywords = ["e-values", "anytime-valid", "sequential testing", "martingale", "abduction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://june.kim/reading/methodeutics/"
Textbook = "https://june.kim/reading/methodeutics/ch10-e-values/"

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/methodeutics"]

[dependency-groups]
dev = ["pytest>=8", "matplotlib>=3.5"]
